--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title title="Calculadora">CALCULA</title>
         <link rel="stylesheet" href="css/stilus.css">
     </head>
     
