--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     
     <body>
+        <p><a href="dos.html">enlace</a></p>
         <table class="centro">
             <thead>
                 <tr>
